fix(sql): Test for sql agent scheduler shuffling