@@ -16,6 +16,7 @@
 
 package com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.converters;
 
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Matchers.any;
@@ -36,9 +37,9 @@ import com.netflix.spinnaker.clouddriver.cloudfoundry.provider.CloudFoundryProvi
 import com.netflix.spinnaker.clouddriver.cloudfoundry.security.CloudFoundryCredentials;
 import com.netflix.spinnaker.credentials.CredentialsRepository;
 import com.netflix.spinnaker.credentials.MapBackedCredentialsRepository;
-import io.vavr.collection.HashMap;
-import io.vavr.collection.List;
+import com.netflix.spinnaker.credentials.NoopCredentialsLifecycleHandler;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ForkJoinPool;
@@ -86,32 +87,38 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
           500,
           cacheRepository,
           null,
-          ForkJoinPool.commonPool()) {
+          ForkJoinPool.commonPool(),
+          emptyMap()) {
         public CloudFoundryClient getClient() {
           return cloudFoundryClient;
         }
       };
 
+  private final CredentialsRepository<ArtifactCredentialsFromString>
+      artifactCredentialsFromStringCredentialsRepository =
+          new MapBackedCredentialsRepository<>(
+              ArtifactCredentialsFromString.ARTIFACT_TYPE, new NoopCredentialsLifecycleHandler<>());
+
   private final ArtifactCredentialsRepository artifactCredentialsRepository =
       new ArtifactCredentialsRepository(
-          Collections.singletonList(
-              Collections.singletonList(
-                  new ArtifactCredentialsFromString(
-                      "test",
-                      List.of("test").asJava(),
-                      "service_instance_name: my-service-instance-name\n"
-                          + "service: my-service\n"
-                          + "service_plan: my-service-plan\n"
-                          + "tags:\n"
-                          + "- tag1\n"
-                          + "updatable: false\n"
-                          + "parameters: |\n"
-                          + "  { \"foo\": \"bar\" }\n"))));
+          Collections.singletonList(artifactCredentialsFromStringCredentialsRepository));
 
   private final CredentialsRepository<CloudFoundryCredentials> credentialsRepository =
       new MapBackedCredentialsRepository<>(CloudFoundryProvider.PROVIDER_ID, null);
 
   {
+    artifactCredentialsFromStringCredentialsRepository.save(
+        new ArtifactCredentialsFromString(
+            "test",
+            List.of("test"),
+            "service_instance_name: my-service-instance-name\n"
+                + "service: my-service\n"
+                + "service_plan: my-service-plan\n"
+                + "tags:\n"
+                + "- tag1\n"
+                + "updatable: false\n"
+                + "parameters: |\n"
+                + "  { \"foo\": \"bar\" }\n"));
     credentialsRepository.save(cloudFoundryCredentials);
   }
 
@@ -126,13 +133,12 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertManifestMapToServiceAttributes() {
     final Map input =
-        HashMap.of(
-                "service", "my-service",
-                "service_instance_name", "my-service-instance-name",
-                "service_plan", "my-service-plan",
-                "tags", List.of("my-tag").asJava(),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service", "my-service",
+            "service_instance_name", "my-service-instance-name",
+            "service_plan", "my-service-plan",
+            "tags", List.of("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThat(converter.convertManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -142,18 +148,17 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
                 .setServicePlan("my-service-plan")
                 .setTags(Collections.singleton("my-tag"))
                 .setUpdatable(true)
-                .setParameterMap(HashMap.<String, Object>of("foo", "bar").toJavaMap()));
+                .setParameterMap(Map.<String, Object>of("foo", "bar")));
   }
 
   @Test
   void convertManifestMapToServiceAttributesMissingServiceThrowsException() {
     final Map input =
-        HashMap.of(
-                "service_instance_name", "my-service-instance-name",
-                "service_plan", "my-service-plan",
-                "tags", Collections.singletonList("my-tag"),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service_instance_name", "my-service-instance-name",
+            "service_plan", "my-service-plan",
+            "tags", Collections.singletonList("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -164,12 +169,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertManifestMapToServiceAttributesMissingServiceNameThrowsException() {
     final Map input =
-        HashMap.of(
-                "service_instance_name", "my-service-instance-name",
-                "service_plan", "my-service-plan",
-                "tags", Collections.singletonList("my-tag"),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service_instance_name", "my-service-instance-name",
+            "service_plan", "my-service-plan",
+            "tags", Collections.singletonList("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -180,12 +184,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertManifestMapToServiceAttributesMissingServicePlanThrowsException() {
     final Map input =
-        HashMap.of(
-                "service", "my-service",
-                "service_instance_name", "my-service-instance-name",
-                "tags", Collections.singletonList("my-tag"),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service", "my-service",
+            "service_instance_name", "my-service-instance-name",
+            "tags", Collections.singletonList("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -196,14 +199,13 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertCupsManifestMapToUserProvidedServiceAttributes() {
     final Map input =
-        HashMap.of(
-                "service_instance_name", "my-service-instance-name",
-                "syslog_drain_url", "test-syslog-drain-url",
-                "updatable", false,
-                "route_service_url", "test-route-service-url",
-                "tags", Collections.singletonList("my-tag"),
-                "credentials_map", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service_instance_name", "my-service-instance-name",
+            "syslog_drain_url", "test-syslog-drain-url",
+            "updatable", false,
+            "route_service_url", "test-route-service-url",
+            "tags", Collections.singletonList("my-tag"),
+            "credentials_map", "{\"foo\": \"bar\"}");
 
     assertThat(converter.convertUserProvidedServiceManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -219,12 +221,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertCupsManifestMapToUserProvidedServiceAttributesMissingServiceNameThrowsException() {
     final Map input =
-        HashMap.of(
-                "syslog_drain_url", "test-syslog-drain-url",
-                "route_service_url", "test-route-service-url",
-                "tags", Collections.singletonList("my-tag"),
-                "credentials_map", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "syslog_drain_url", "test-syslog-drain-url",
+            "route_service_url", "test-route-service-url",
+            "tags", Collections.singletonList("my-tag"),
+            "credentials_map", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -235,23 +236,21 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertDescriptionWithUserProvidedInput() {
     final Map input =
-        HashMap.of(
-                "credentials",
-                "test",
-                "region",
-                "org > space",
-                "userProvided",
-                true,
-                "manifest",
-                Collections.singletonList(
-                    HashMap.of(
-                            "serviceInstanceName", "userProvidedServiceName",
-                            "tags", Collections.singletonList("my-tag"),
-                            "syslogDrainUrl", "http://syslogDrainUrl.io",
-                            "credentials", "{\"foo\": \"bar\"}",
-                            "routeServiceUrl", "http://routeServiceUrl.io")
-                        .toJavaMap()))
-            .toJavaMap();
+        Map.of(
+            "credentials",
+            "test",
+            "region",
+            "org > space",
+            "userProvided",
+            true,
+            "manifest",
+            Collections.singletonList(
+                Map.of(
+                    "serviceInstanceName", "userProvidedServiceName",
+                    "tags", Collections.singletonList("my-tag"),
+                    "syslogDrainUrl", "http://syslogDrainUrl.io",
+                    "credentials", "{\"foo\": \"bar\"}",
+                    "routeServiceUrl", "http://routeServiceUrl.io")));
 
     final DeployCloudFoundryServiceDescription result = converter.convertDescription(input);
     assertThat(result.getServiceAttributes()).isNull();
@@ -263,7 +262,7 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
                 .setRouteServiceUrl("http://routeServiceUrl.io")
                 .setTags(Collections.singleton("my-tag"))
                 .setUpdatable(true)
-                .setCredentials(HashMap.<String, Object>of("foo", "bar").toJavaMap()));
+                .setCredentials(Map.of("foo", "bar")));
   }
 
   private static class WithMap {
